Fixed profile dropdown hober overflow

--- a/hobbysite/static/styles/base.css
+++ b/hobbysite/static/styles/base.css
@@ -147,6 +147,7 @@ nav > div:last-child > div:last-child > a {
 }
 .profile-dropdown:hover > ul {
     display: block;
+    overflow: hidden;
 }
 .profile-dropdown > ul > li {
     padding: 0 1em;
